# api_store

./: pyproject.toml
store/usecases/: product.py
tests/: conftest.py
tests/controllers/: test_product.py
tests/schemas/: factories.py  test_product.py
tests/usescases/: test_product.py
