[tool.poetry]
name = "tdd-project"
version = "0.0.1"
description = ""
authors = ["allanapavao <allanarodrigues.p@gmail.com>"]
packages = [
    { include = "tdd_project" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
pydantic = "^2.10.3"
pytest = "^8.3.4"
motor = "^3.6.0"
pydantic-settings = "^2.6.1"
pytest-asyncio = "^0.24.0"
pre-commit = "^4.0.1"
httpx = "^0.28.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
  "--strict-config",
  "--strict-markers",
  "--ignore=docs_src",
]
xfail_strict = true
junit_family = "xunit2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
